# mcpred

./: .gitattributes  .gitignore  DEPENDENCIES.md  DESIGN.md  GITHUB.md  IMPLEMENTATION.md  README.md  TODO.md  __init__.py  bigtest.red  example.red  main.py  pyproject.toml  quicktest.red  requirements.txt  test_cli.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  discover.py
config/: __init__.py  loader.py  validation.py
core/: __init__.py  client.py  exceptions.py  session.py  transports.py
reporting/: __init__.py  exporters.py  formatters.py  generators.py
security/: __init__.py  analyzers.py  auth_tests.py  discovery.py  protocol_fuzzer.py  stress_tests.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_client_integration.py
tests/unit/: __init__.py  test_client.py  test_exceptions.py  test_session.py  test_transports.py
